header: Fix dark mode header box-shadow.
Followup to 239b6737c0a58e3d86d2c0d1c9e684fe994ad72b

--- a/web/styles/dark_theme.css
+++ b/web/styles/dark_theme.css
@@ -195,7 +195,7 @@
 
     #navbar-middle .column-middle-inner,
     #userlist-toggle-button,
-    .header-main,
+    .header,
     #message_view_header {
         background-color: hsl(0deg 0% 13%);
     }
